--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,9 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+# extra
+Pods/
+Podfile.lock
+.DS_Store
+NEUEvents/GoogleService-Info.plist
