--- a/NEUEvents/Info.plist
+++ b/NEUEvents/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSRemindersUsageDescription</key>
+	<string>Please allow access to calender</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Please allow access to calender</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Please allow access</string>
 	<key>CFBundleURLTypes</key>
